@@ -19,11 +19,13 @@ AUX vmware-authd 211 RMD160 1bd60030f6f7bb78c0fd3b6d156498121d4be5d4 SHA1 514538
 AUX vmware-server.rc 1529 RMD160 d6840024f8c7be0a673e5e29660cc75fea9520d8 SHA1 049cf33eb5bac09415f8e2a85f7ecfd0bbc5ab4a SHA256 ef551e4240eea88184c96e286354a53a4983ce80c3332a127767301b42586cb2
 AUX vmware-server.xml 1592 RMD160 0d7e9ed13ebb3c73dd847e95fa95499296609e8c SHA1 02db2ee7ca0abb8b8793c9f56d858bb08c1c715f SHA256 56aafee80ad705e8d832f8853c36d763d37b87d1cb132a41c50eb63085ae854d
 DIST VMware-server-1.0.4-56528.tar.gz 106577920 RMD160 2922bd0e8f5381ce0ddaeec3d03a571f016c84b5 SHA1 c1dce05d64d98cbf0b3f37989e08a82b0b7f3664 SHA256 01335e4f0be83249b6bc72e7683c6dc85a6f127012e7fb5f18dd5c1ef5e62b31
+DIST VMware-server-1.0.5-80187.tar.gz 106920012 RMD160 3d89bdab484cd2c9875ddb777c375ab90a75d2f8 SHA1 459d7681a22a790d5b9495fd6d73a6854af6e01e SHA256 450a0fc8b0589d9baee86312909788f8888fe25ac5258350830f821c8b2e9efb
 DIST VMware-server-e.x.p-63231.i386.tar.gz 369654030 RMD160 7a702a1b5c4838696abccae79edcfe4265e1178a SHA1 a155b0c17951b4bb629013fc4dd1bec4ad368b3a SHA256 8c56b6397e05d02c31adabee69ae1965cb6de545f7a0b5bb23cb020215c698d1
 DIST VMware-server-e.x.p-63231.x86_64.tar.gz 340199772 RMD160 a6cfb9776300b4ab09c5bf17bc3ce6769df0a1b0 SHA1 bfd566a06b5269266bbf92a7293b77a438a35d1d SHA256 0a7197044f40985c75cd3dd912a87e150daef10fb187d75a1026a8aa5f9ceed9
 DIST vmware-libcrypto.so.0.9.7l.tar.bz2 412159 RMD160 89282ae9fc6e8921a47704bc9cd23cf70a6870e8 SHA1 f86c4cb076fe1764975e9243dc0fae763f2b589a SHA256 fae52acf61415959cca763a715a2b61ec49f161a416d418d6a1faffce531db12
 DIST vmware-libssl.so.0.9.7l.tar.bz2 78244 RMD160 195dd4808e60f81621e6ed12b843ded49c0fa747 SHA1 5fe729a1e49e77afd83b408845833174e1296e39 SHA256 3e1e13196066dc5b77d3ef6b5df55a29156eba1f39661e40cd617b538220d089
 DIST vmware-server-perl-fixed-rpath-libs.tar.bz2 73834 RMD160 7f64627b5b945e8d7dabe39c165a4b66b71fb4d3 SHA1 9d696750ca3ec92b31ca8112fd80dcd832494044 SHA256 c42299dd033187c67b45b739da66583fbd94cdcba745200b89a25ac96cd9364b
 EBUILD vmware-server-1.0.4.56528.ebuild 3265 RMD160 3ca6e5245b40fec55644041f0bbbebd528b9d089 SHA1 97abb8b61deaebffb54d5e9d4cb3f8abf9038458 SHA256 d1fd5661e3344392b0027b49cc808148ead684d96e355164617f03d7648f5e09
+EBUILD vmware-server-1.0.5.80187.ebuild 3007 RMD160 48bedcbb0374ec3ec8cd84f386bf7b1ecd4f5152 SHA1 4d3be4771d820621e985f7af4d7ba6e18ef4ea4f SHA256 506b527000745422c4c00e0016f95940a7091f5f7436df78a85147f255c99405
 EBUILD vmware-server-2.0.0.63231.ebuild 3237 RMD160 8c8ed359673e494acbb194b323e74ee9158eb69c SHA1 2b43570289f18ab496627f74d029fec346c85bbd SHA256 7ef2fb7f7639ad66208a8fd12f8aaa2eadff96ed5d9096fc88c80c4139c5c6d4
 MISC metadata.xml 159 RMD160 fc7f68a382390e5916b0fb43f37a893fad4f9798 SHA1 f46b02a39bcd0165558de67ff4256cfc812418a3 SHA256 8581ae1c90a48f50fa0542c7fb28cb8984baaf12f50fa18f33e467081effb215
