@@ -19,6 +19,8 @@ AUX 6.0.3.80004/007_all_use-modprobe-over-insmod.patch 448 RMD160 136dfcfe2df7a7
 AUX 6.0.3.80004/009_all_init.d-modules-warning.patch 991 RMD160 6205e976db47cd3361b5eca8593414d411a2ab8d SHA1 3742749baa606a57d447931f0af791696a49e660 SHA256 5fbc9f101abb3816a732f64a75e90ce7fcb6783c3cd7bae521d8785e88634498
 AUX 6.0.3.80004/011_all_legit-modules-only.patch 646 RMD160 484d15ebc05fb93d69866987cf805afdbba019c9 SHA1 f36a8b4b7153cfe213ee7cd1e82c871f3c9efa90 SHA256 b66a534d93ae7dc76b54631cbbaccc751691941ab704a9c1e566a9c866b15729
 AUX 90vmware-workstation 106 RMD160 471fb03d54bb48c651d4543f1c8ece1bb9b40c0a SHA1 3db7ec2a3b37a84328bf3d481a58b42499ef520b SHA256 c8f7143551f516b901143e60fc74e822ca3d235477d1c2a135bb36cbc639cf1e
+AUX vmware-player.desktop 599 RMD160 a5a9897671da69c4706ba412d9a041edfd13a9b7 SHA1 12af70f7039b19838e298d1949df28b1b8d407a6 SHA256 b967f2e6dba531613498a2dea130f557fc366e869876aa63ba3ae97f5ff59c54
+AUX vmware-workstation.desktop 605 RMD160 256b59a1e52b65279ef38b3dcf52c43a34090807 SHA1 8f8c1fded85070be0532e33f1bdc05425e33bfb1 SHA256 ae2f572200a16a1e1222e282268ae138588c0e7576045a584c1d17f54f379f3e
 AUX vmware-workstation.rc 1862 RMD160 000c71ee5c62edc27d3df3f23286e1fe8490516e SHA1 cf1db60598d0d2fe44260f7387537ec1babf3a52 SHA256 76e6ea8c199a4dced79a75a0346360714941ef192b61e4610c6229e071d64782
 AUX vmware-workstation.xml 1592 RMD160 0d7e9ed13ebb3c73dd847e95fa95499296609e8c SHA1 02db2ee7ca0abb8b8793c9f56d858bb08c1c715f SHA256 56aafee80ad705e8d832f8853c36d763d37b87d1cb132a41c50eb63085ae854d
 DIST VMware-workstation-5.5.5-56455.tar.gz 111516196 RMD160 a239464792fec9f7d420ad7e7854b3c23aa88692 SHA1 1a60e707076ce7f4e66c40c19331b3ebc1b907f6 SHA256 e7d906008160ec89f4a07f15b065f2ede6a31038a666f8e0bd30919bfe5f3c23
@@ -29,4 +31,4 @@ DIST VMware-workstation-6.0.3-80004.x86_64.tar.gz 199349808 RMD160 c49340796824d
 DIST vmware-any-any-update115.tar.gz 493641 RMD160 56cabe56f70c01a22a7671e861cc5a2df19855c7 SHA1 ff9b6fdf6ca74495eb5f4822a1854fc91185377c SHA256 b1c14fa9514663b85c2efe8331407e71cce96e5a21a8b941fa570c960bbdcaa1
 EBUILD vmware-workstation-5.5.5.56455.ebuild 3102 RMD160 a8323412796d4f6d2c97560d756693ed504a5f35 SHA1 4b9204ce3907913f40735d3ec81e4ce78f9adff2 SHA256 9b11fe8b5ee4cd5edc7b0e49a56a9da31019f0fc53f1cc2fca22da8d7dc38f5a
 EBUILD vmware-workstation-6.0.2.59824.ebuild 3696 RMD160 bdafb06042366e4a05aeb76f6bb2ffef6244c050 SHA1 69df59dc870890cd2c0224a884eaabe52ef5cf0d SHA256 0366a3ba6a3ddea60fcc0f25adf8e014b41ac1c15e258e45e5b832e5321e950b
-EBUILD vmware-workstation-6.0.3.80004.ebuild 3735 RMD160 bfba80c25f08cda5e5f78c3543a36ee2db35580b SHA1 a96cb135e08b5ebe4a15041c70eb52d870f591ab SHA256 ec721a56858535d110d9815a09697b2fc9d2d6fb0898f4e7e8429e2c4ab1f608
+EBUILD vmware-workstation-6.0.3.80004.ebuild 4200 RMD160 243b5b5be40ed53bc42d18810b2248141d46a07e SHA1 c3cad0d96886bb808cf00734dac69a693b5c3e25 SHA256 b6f9b3e23cb05f13374777e03f31acb04b35f546d65ef67af9930a79d00cf0ed
